objects/TT_Authentication_Credential__mdt/TT_Authentication_Credential__mdt.object-meta.xml
<CustomObject>
    <label>TT Authentication Credential</label>
    <pluralLabel>TT Authentication Credentials</pluralLabel>
</CustomObject>