objects/TT_Authentication_Credential__mdt/fields/Auto_Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Auto_Registration_URL__c</fullName>
    <label>Auto Registration URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>