objects/TT_Authentication_Credential__mdt/fields/Is_Trial__c.field-meta.xml
<CustomField>
    <fullName>Is_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Trial</label>
    <type>Checkbox</type>
</CustomField>