objects/TT_Authentication_Credential__mdt/fields/isQA__c.field-meta.xml
<CustomField>
    <fullName>isQA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isQA</label>
    <type>Checkbox</type>
</CustomField>